# LandyGaugeFirmware

./: .gitignore  CMakeLists.txt  HARDWARE_VARIANTS.md  README.md  SCALING_NOTES.md  TEST_PLAN.md  USER_MANUAL.md  convert_image.py  fine_tune.sh  partitions.csv  pytest_rgb_panel_lvgl.py  scale_update.sh  sdkconfig  sdkconfig.defaults  sdkconfig.touch_backup
backup_custom/: main.c.custom
backup_custom/ArtificialHorizon/: artificial_horizon.c  artificial_horizon.h  artificial_horizon_example.c
backup_custom/Clock/: clock.c  clock.h
backup_custom/WarningBeep/: warning_beep.c  warning_beep.h
backup_custom/WiFi_NTP/: wifi_ntp.c  wifi_ntp.h
components/lvgl__lvgl/: lv_conf.h
main/: 110Rear235.c  110RearDark235.c  110Roof150w.c  110RoofDark150w.c  110Side292w.c  110SideDark292w.c  CMakeLists.txt  Kconfig.projbuild  logo.c  logoDark.c  main.c
main/ArtificialHorizon/: README.md  artificial_horizon.c  artificial_horizon.h  artificial_horizon_old.c
main/Audio_Driver/: PCM5101.c  PCM5101.h
main/BAT_Driver/: BAT_Driver.c  BAT_Driver.h
main/BLE_TPMS/: ble_tpms.c  ble_tpms.h
main/Boost/: boost.c  boost.h
main/Button_Driver/: button_input.c  button_input.h  user_input.c  user_input.h
main/Clock/: clock.c  clock.h
main/Compass/: compass.c  compass.h
main/Cooling/: cooling.c  cooling.h
main/EGT/: egt.c  egt.h
main/EXIO/: TCA9554PWR.c  TCA9554PWR.h
main/ExpansionBoard/: ads1115.c  ads1115.h  expansion_board.c  expansion_board.h  lis3mdl.c  lis3mdl.h  mcp23017.c  mcp23017.h  mcp9600.c  mcp9600.h
main/I2C_Driver/: I2C_Driver.c  I2C_Driver.h  I2C_Scanner.c
main/IMU/: imu_attitude.c  imu_attitude.h
main/Incline/: incline.c  incline.h
main/LCD_Driver/: ST7701S.c  ST7701S.c.old  ST7701S.h  ST7701S.h.old  ST77916.c  ST77916.h
main/LCD_Driver/esp_lcd_st77916/: CMakeLists.txt  esp_lcd_st77916.c  esp_lcd_st77916.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.c.backup  LVGL_Driver.h  lv_port_mem.c  lv_port_mem.h  style.h  styles.c
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h  LVGL_Music.c  LVGL_Music.h
main/MIC_Driver/: MIC_Speech.c  MIC_Speech.h
main/PCF85063/: PCF85063.c  PCF85063.h
main/PWR_Key/: PWR_Key.c  PWR_Key.h
main/QMI8658/: QMI8658.c  QMI8658.h
main/SD_Card/: SD_MMC.c  SD_MMC.h  sd_images.c  sd_images.h
main/Settings/: settings.c  settings.h  settings_screen.c  settings_screen.h
main/Simulated_Gesture/: Simulated_Gesture.c  Simulated_Gesture.h
main/Tilt/: tilt.c  tilt.h
main/TirePressure/: tire_pressure.c  tire_pressure.h
main/Touch_Driver/: CST820.c  CST820.h
main/Touch_Driver/esp_lcd_touch/: esp_lcd_touch.c  esp_lcd_touch.h
main/WarningBeep/: warning_beep.c  warning_beep.h
main/WiFi_NTP/: wifi_ntp.c  wifi_ntp.h
main/Wireless/: Wireless.c  Wireless.h
