idf_component_register(
                         SRCS 
                              "./main.c" 
                              "./EXIO/TCA9554PWR.c"
                              "./Audio_Driver/PCM5101.c" 
                              
                              "./LCD_Driver/esp_lcd_st77916/esp_lcd_st77916.c" 
                              "./LCD_Driver/ST77916.c"       
                              
                              "./Touch_Driver/CST820.c"
                              "./Touch_Driver/esp_lcd_touch/esp_lcd_touch.c"
                              "./LVGL_Driver/LVGL_Driver.c"
                              "./LVGL_Driver/styles.c"
                              "./Clock/clock.c"
                              "./WiFi_NTP/wifi_ntp.c"
                              "./logo.c"
                              "./ArtificialHorizon/artificial_horizon.c"
                              "./SD_Card/SD_MMC.c" 
                              "./I2C_Driver/I2C_Driver.c"
                              "./PCF85063/PCF85063.c"
                              "./QMI8658/QMI8658.c"
                              "./BAT_Driver/BAT_Driver.c"
                              "./PWR_Key/PWR_Key.c"
                              "./Wireless/Wireless.c"
                              "./Tilt/tilt.c"

                         INCLUDE_DIRS 
                              "./Audio_Driver" 
                              
                              "./LCD_Driver/esp_lcd_st77916" 
                              "./LCD_Driver"   
                              
                              "./Touch_Driver"
                              "./Touch_Driver/esp_lcd_touch"
                              "./LVGL_Driver" 
                              
                              "./Clock"
                              "./WiFi_NTP"
                              "./ArtificialHorizon"
                              "./EXIO"
                              "./SD_Card" 
                              "./I2C_Driver"
                              "./PCF85063"
                              "./Tilt"
                              "./QMI8658"
                              "./BAT_Driver"
                              "./PWR_Key"
                              "./Wireless"
                              "."
                       )
