idf_component_register(
                         SRCS 
                              "./main.c" 
                              "./EXIO/TCA9554PWR.c"
                              "./Audio_Driver/PCM5101.c" 
                              
                              "./LCD_Driver/esp_lcd_st77916/esp_lcd_st77916.c" 
                              "./LCD_Driver/ST77916.c"       
                              
                              "./Touch_Driver/CST820.c"
                              "./Touch_Driver/esp_lcd_touch/esp_lcd_touch.c"
                              "./Button_Driver/button_input.c"
                              "./LVGL_Driver/LVGL_Driver.c"
                              "./LVGL_Driver/styles.c"
                              "./Clock/clock.c"
                              "./WiFi_NTP/wifi_ntp.c"
                              "./logo.c"
                              "./110Roof150w.c"
                              "./110RoofDark150w.c"
                              "./ArtificialHorizon/artificial_horizon.c"
                              "./WarningBeep/warning_beep.c"
                              "./SD_Card/SD_MMC.c" 
                              "./I2C_Driver/I2C_Driver.c"
                              "./PCF85063/PCF85063.c"
                              "./QMI8658/QMI8658.c"
                              "./BAT_Driver/BAT_Driver.c"
                              "./PWR_Key/PWR_Key.c"
                              "./Wireless/Wireless.c"
                              "./Tilt/tilt.c"
                              "./TirePressure/tire_pressure.c"

                         INCLUDE_DIRS 
                              "./Audio_Driver" 
                              
                              "./LCD_Driver/esp_lcd_st77916" 
                              "./LCD_Driver"   
                              
                              "./Touch_Driver"
                              "./Touch_Driver/esp_lcd_touch"
                              "./Button_Driver"
                              "./LVGL_Driver" 
                              
                              "./Clock"
                              "./WiFi_NTP"
                              "./ArtificialHorizon"
                              "./WarningBeep"
                              "./EXIO"
                              "./SD_Card" 
                              "./I2C_Driver"
                              "./PCF85063"
                              "./Tilt"
                              "./TirePressure"
                              "./QMI8658"
                              "./BAT_Driver"
                              "./PWR_Key"
                              "./Wireless"
                              "."
                       )
